syntax = "proto3";
package shmsg;

option go_package = "./;shmsg";

message DecryptionTrigger {
    uint64 instanceID = 1;
    uint64 epochID = 2;
    bytes transactionsHash = 3;
    bytes signature = 4;
}

// TODO: replace keyper index by signature
message DecryptionKeyShare {
    uint64 instanceID = 1;
    uint64 epochID = 2;
    uint64 keyperIndex = 3;
    bytes share = 4;
}

message DecryptionKey {
    uint64 instanceID = 1;
    uint64 epochID = 2;
    bytes key = 3;
}

message EonPublicKey {
    uint64 instanceID = 1;
    bytes publicKey= 2;
    uint64 activationBlock = 3;
    uint64 keyperIndex = 4;
    bytes signature = 5;
}
